--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="aboutStyle.css">
 </head>
 
-<body background="D:\Symphony\Symphony\Images\bg.jpg">
+<body background="https://th.bing.com/th/id/R.ce7f88f8bbfaf8f8480d2606d631e16d?rik=DMiZng0ovVX1Ag&riu=http%3a%2f%2fwallup.net%2fwp-content%2fuploads%2f2017%2f11%2f10%2f182393-music-Partition-violin.jpg&ehk=Ck8ltzg3RI5dqQfX752B34ybmpHcDeCJXM77QytvViQ%3d&risl=&pid=ImgRaw&r=0">
     <header>
         <nav class="navbar">
             <ul>
