--- a/explore.html
+++ b/explore.html
@@ -32,7 +32,7 @@
             <h1>Best of Western Classical Pieces</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="Songs/covers/Beethoven.png" alt="Ludwig van Beethoven">
+                    <img src="https://img.discogs.com/RWLprR32ULN49ALHS0sT6h5Lfos=/fit-in/300x300/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/R-3958367-1382292394-2025.jpeg.jpg" alt="Ludwig van Beethoven">
                     <span class="songName">Moonlight Sonata No.14 in - 1st movement</span>
                     <span class="songlistplay"><span class="timestamp">5:28<i id="0"
                                 class="far songItemPlay fa-play-circle"></span></i></span>
@@ -44,7 +44,7 @@
                                 class="far songItemPlay fa-play-circle"></span></i></span>
                 </div>
                 <div class="songItem">
-                    <img src="Songs/covers/Liszt's Liebestraum.jpg" alt="Liszt's Liebestraum">
+                    <img src="Songs/covers/Juventino Rosas.jpg" alt="Liszt's Liebestraum">
                     <span class="songName">Liszt's Liebestraum No.3</span>
                     <span class="songlistplay"><span class="timestamp">4:24<i id="2"
                                 class="far songItemPlay fa-play-circle"></span></i></span>
